<resources>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_ai">FOODIEF-AI</string>
    <string name="title_setting">Setting</string>
    <string name="title_profile">Profile</string>
    <string name="welcome">Welcome!!!</string>
    <string name="account_setting">Account Setting</string>
    <string name="profile">Profile</string>
    <string name="app_setting">Application Setting</string>
    <string name="notif">Show Notification</string>
    <string name="more">More</string>
    <string name="title_aboutus">About Us</string>
    <string name="title_TC">Terms and Conditions</string>
    <string name="title_favorite">Favorite</string>
    <string name="logout">Logout</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="conf_pass">Confirm Password</string>
    <string name="save">Save</string>
    <string name="today_calories">TODAY’S CALORIES</string>
    <string name="cals">Calorie</string>
    <string name="protein">Protein</string>
    <string name="fats">Fats</string>
    <string name="carbs">Carbs</string>
    <string name="today_food">TODAY’S FOOD</string>
    <string name="dev_by">Develop By : </string>
    <string name="description">A smart app that helps you easily calculate the calories of your food! Simply take a photo of the food you’re about to eat, and Foodiefy will accurately calculate its calorie content.</string>
    <string name="next">Next</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_Up">Sign Up</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="remember_text">Remember Me</string>
    <string name="forgot_text">Forgot Password ?</string>
    <string name="login_text">Sign In</string>
    <string name="or">Or</string>
    <string name="text_nama_lengkap">Full Name</string>
    <string name="nomor_telf">Phone Number</string>
    <string name="confirmpass_text">Confirm Password</string>
    <string name="create_acc">Cretae Account</string>
    <string name="tnc"><![CDATA[Terms & Condition]]></string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="welcome_penjelasan">Track Your Nutrition, maintaining good health should be the primary focus of everyone.</string>
    <string name="continueButton">Continue</string>
    <string name="welcome_text">Welcome To</string>
    <string name="oneoffive">1 of 5</string>
    <string name="twoffive">2 of 5</string>
    <string name="threeoffive">3 of 5</string>
    <string name="fouroffive">4 of 5</string>
    <string name="fiveoffive">5 of 5</string>
    <string name="isi_tc">Lorem ipsum odor amet, consectetuer adipiscing elit. Litora nulla tempor pellentesque nulla dictum class consectetur curabitur. Vel iaculis dictum ipsum massa; phasellus condimentum venenatis. Metus purus nam tempus diam morbi libero nulla. Sagittis arcu mauris parturient congue penatibus euismod suspendisse. Hendrerit leo fames ut vulputate pellentesque libero fusce vulputate. Congue condimentum conubia venenatis diam integer facilisi nibh cursus. Scelerisque parturient mattis tortor malesuada fusce conubia nunc. Nec eros nec himenaeos natoque gravida, class laoreet leo ex.\n\nCursus elementum faucibus nisi turpis neque sed duis congue augue. Aenean vitae laoreet aenean posuere ex maximus. Sagittis hac mus primis iaculis dignissim sem mus. Facilisis suscipit phasellus sit ligula, fermentum in blandit nascetur. Imperdiet cras himenaeos pulvinar non libero ullamcorper nisi. Integer potenti leo curabitur nisl pulvinar curabitur dis arcu integer. Cubilia nullam nullam in eleifend inceptos urna risus dapibus consectetur. Habitant lobortis rhoncus semper libero enim.\n\nTempus turpis praesent aliquam dignissim natoque blandit. Nam tellus ultricies maximus convallis odio himenaeos tristique metus. Cubilia aliquam primis arcu nullam molestie sit non justo. Lectus enim posuere bibendum non sed sodales rhoncus. Convallis volutpat curae venenatis ultrices est sed arcu. Placerat vestibulum montes ullamcorper nisi suscipit hac dictumst ultricies posuere. Dui porta ipsum per velit proin magna lobortis.\n\nPretium mus duis ac proin nibh hendrerit rhoncus. Quam primis risus erat donec tristique class habitasse. Ante arcu tristique dignissim luctus cubilia ornare. Elementum libero faucibus mollis nulla volutpat. Donec cursus orci tempor; parturient ex blandit efficitur. Leo quam amet volutpat morbi viverra maximus class ultrices massa? Dis purus luctus ac; pulvinar per et.\n\nArcu ipsum enim faucibus augue pharetra ipsum. Torquent vitae non ligula libero, inceptos ipsum sodales at. Curabitur nisi cursus facilisis habitant elementum. Quisque interdum integer massa pellentesque mollis luctus. Ad inceptos iaculis tincidunt fringilla felis. Eros turpis inceptos dis ipsum ultricies. Fringilla ullamcorper sed convallis nisi bibendum dapibus, feugiat venenatis.</string>
    <string name="text_gender">What’s your gender?</string>
    <string name="input_text_hint">Type a message</string>
    <string name="send_message_text">Send</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_umur">How old are you?</string>
    <string name="text_weight">What’s your current weight right now?</string>
    <string name="text_height">What’s your current height right now?</string>
    <string name="no_favorite">Tidak ada favorite</string>
    <string name="text_activity">What’s your activity intensity?</string>
    <string name="app_name">Foodiefy</string>
    <string name="title_awal">Awal</string>
    <string name="lanjut">Swipe Up For Next Page</string>
    <string name="title_signIn">Sign In</string>
    <string name="title_welcome">Welcome</string>
    <string name="title_gender">Gender</string>
    <string name="title_age">Age</string>
    <string name="title_weight">Weight</string>
    <string name="title_height">Height</string>
    <string name="title_activity">Activity Intensity</string>
    <string name="hint_email">Enter your email</string>
    <string name="hint_pass">Enter your password</string>
    <string name="emailtext">aaaaaaaaaa</string>
    <string name="hint_name">Enter your full name</string>
    <string name="hint_phone">Enter your phone number</string>
    <string name="hint_confirm_pass">Enter your password again</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="terms"><![CDATA[Terms & Condition]]></string>
    <string name="hint_umur">Enter your age</string>
    <string name="hint_bb">Enter your weight</string>
    <string name="hint_high">Enter your high</string>
    <string name="text_calorie">Yayy, your data \nis complete!!</string>
    <string name="text_calorie_intakes">Your body needs</string>
    <string name="hasil_calorie">hasil</string>
    <string name="title_calorie">Calorie Intakes</string>
    <string name="tflitevision_is_not_initialized_yet">TfLiteVision is not initialized yet</string>
</resources>