<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.calorieIntakes.CalorieFragment">

    <ImageView
        android:id="@+id/ic_back"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:src="@drawable/ic_back"/>

    <ImageView
        android:id="@+id/logolurus"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/logo_lurus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/text_calorie"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:text="@string/text_calorie"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logolurus"
        android:layout_marginTop="40dp"/>


    <ImageView
        android:id="@+id/img_api"
        android:layout_width="200dp"
        android:layout_height="200dp"
        tools:src="@drawable/api"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_calorie"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/text_calorie_intakes"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:text="@string/text_calorie_intakes"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_api"
        android:layout_marginTop="40dp"/>


    <TextView
        android:id="@+id/hasil_calorie_intakes"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/hasil_calorie"
        android:background="@drawable/rounded_hasil_calorie"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_calorie_intakes"
        android:layout_marginTop="5dp"/>


    <Button
        android:id="@+id/continueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/hijau_cerah"
        android:text="@string/continueButton"
        android:layout_centerHorizontal="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="100dp" />




</androidx.constraintlayout.widget.ConstraintLayout>